create 'startSearch' function that looks for an item from the list

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Search</title>
 </head>
@@ -14,11 +17,11 @@
         <div class="header">
             <div class="shadow"></div>
             <h1>BookSearch</h1>
-            <input type="text" class="search" placeholder="Wpisz nazwę wyszukiwanego napoju">
-            <!-- <button class="searchBtn">Search</button> -->
+            <input type="text" class="search" placeholder="Wpisz nazwę wyszukiwanej książki">
+            <button class="searchBtn">Szukaj</button>
         </div>
 
-        <div class="drink-list">
+        <div class="book-list">
             <h2>Lista książek:</h2>
             <ul>
                 <li>Stephen King - To</li>
@@ -29,7 +32,7 @@
                 <li>Hanya Yanagihara - Małe życie</li>
                 <li>Kai Strittmatter - Chiny 5.0</li>
                 <li>George Orwell - Rok 1984</li>
-                <li>Stephet King - Wielki marsz</li>
+                <li>Stephen King - Wielki marsz</li>
                 <li>Brandon Sanderson - Elantris</li>
                 <li>Robert M. Wegner - Opowieści z meekhańskiego pogranicza</li>
                 <li>Fiodor Dostojewski - Zbrodnia i kara</li>
@@ -37,6 +40,8 @@
             </ul>
         </div>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
