implement highlight searching phrase in list of item

--- a/index.html
+++ b/index.html
@@ -2,45 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Search</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Search</title>
 </head>
 
 <body>
 
-    <div class="wrapper">
-        <div class="header">
-            <div class="shadow"></div>
-            <h1>BookSearch</h1>
-            <input type="text" class="search" placeholder="Wpisz nazwę wyszukiwanej książki">
+        <div class="wrapper">
+                <div class="header">
+                        <div class="shadow"></div>
+                        <h1>BookSearch</h1>
+                        <input type="text" class="search" placeholder="Wpisz nazwę wyszukiwanej książki">
+                </div>
+
+                <div class="book-list">
+                        <h2>Lista książek:</h2>
+                        <ul>
+
+                                <li>Stephen King - To</li>
+                                <li>George R. R. Martin - Gra o Tron</li>
+                                <li>Brandon Sanderson - Droga królów</li>
+                                <li>J. R. R. Tolkien - Władca Pierścieni</li>
+                                <li>John Steinbeck - Na wschód od Edenu</li>
+                                <li>Hanya Yanagihara - Małe życie</li>
+                                <li>Kai Strittmatter - Chiny 5.0</li>
+                                <li>George Orwell - Rok 1984</li>
+                                <li>Stephen King - Wielki marsz</li>
+                                <li>Brandon Sanderson - Elantris</li>
+                                <li>Robert M. Wegner - Opowieści z meekhańskiego
+                                        pogranicza
+                                </li>
+                                <li>Fiodor Dostojewski - Zbrodnia i kara</li>
+                                <li>Glukhovsky Dmitry - Futu.re</li>
+                        </ul>
+                        <p class="message"></p>
+                </div>
         </div>
 
-        <div class="book-list">
-            <h2>Lista książek:</h2>
-            <ul>
-                <li>Stephen King - To</li>
-                <li>George R. R. Martin - Gra o Tron</li>
-                <li>Brandon Sanderson - Droga królów</li>
-                <li>J. R. R. Tolkien - Władca Pierścieni</li>
-                <li>John Steinbeck - Na wschód od Edenu</li>
-                <li>Hanya Yanagihara - Małe życie</li>
-                <li>Kai Strittmatter - Chiny 5.0</li>
-                <li>George Orwell - Rok 1984</li>
-                <li>Stephen King - Wielki marsz</li>
-                <li>Brandon Sanderson - Elantris</li>
-                <li>Robert M. Wegner - Opowieści z meekhańskiego pogranicza</li>
-                <li>Fiodor Dostojewski - Zbrodnia i kara</li>
-                <li>Glukhovsky Dmitry - Futu.re</li>
-            </ul>
-        </div>
-    </div>
-
-    <script src="js/script.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
